@@ -398,6 +398,7 @@ const createBlobCache = (editor: Editor) => (file: File, blobUri: string, dataUr
   blob: file,
   blobUri,
   name: file.name ? file.name.replace(/\.[^\.]+$/, '') : null,
+  filename: file.name,
   base64: dataUrl.split(',')[ 1 ]
 });
 
